# net_server

./: .gitattributes  CMakeLists.txt  README.md  net.cpp  net.hpp  traced_resnet_model.pt
src/: all_in_one.cpp  net.cpp  net.hpp  server.cpp
